--- a/eclient.properties
+++ b/eclient.properties
@@ -9,3 +9,5 @@ logging.pattern.console=%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n
 
 #unique id for each instance of eureka-client
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+
+tempName=John
