--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,7 @@
 #format output log
 logging.pattern.console=%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n
+
+#enable actuator
+management.endpoint.gateway.enabled=true
+#enable all endpoints
+management.endpoints.web.exposure.include=*
