--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -7,7 +7,7 @@ spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 #routing
-spring.cloud.gateway.routes[0].id=test
-spring.cloud.gateway.routes[0].uri=lb://eclient
-spring.cloud.gateway.routes[0].predicates[0]=Path=/main/test
+spring.cloud.gateway.routes[0].id=getAllUsers
+spring.cloud.gateway.routes[0].uri=lb://mysql-server
+spring.cloud.gateway.routes[0].predicates[0]=Path=/users/
 spring.cloud.gateway.routes[0].predicates[1]=Method=GET
