--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -11,3 +11,8 @@ spring.cloud.gateway.routes[0].id=getAllUsers
 spring.cloud.gateway.routes[0].uri=lb://mysql-server
 spring.cloud.gateway.routes[0].predicates[0]=Path=/users/
 spring.cloud.gateway.routes[0].predicates[1]=Method=GET
+
+spring.cloud.gateway.routes[1].id=getAllCars
+spring.cloud.gateway.routes[1].uri=lb://mongo-server
+spring.cloud.gateway.routes[1].predicates[0]=Path=/cars/
+spring.cloud.gateway.routes[1].predicates[1]=Method=GET
